@@ -1,0 +1,81 @@
+block_EOL.texi(,2) 
+block_EOL.texi(,3) @setfilename block_EOL.info
+block_EOL.texi(,4) 
+block_EOL.texi(,5) @node Top
+block_EOL.texi(,6) @top Test for end of lines and block commands
+block_EOL.texi(,7) 
+block_EOL.texi(,8) @heading html
+block_EOL.texi(,9) 
+block_EOL.texi(,10) Block commands on a line
+block_EOL.texi(,11) @html
+block_EOL.texi(,12) in block
+block_EOL.texi(,13) in block l2
+block_EOL.texi(,14) @end html
+block_EOL.texi(,15) end commands on a line.
+block_EOL.texi(,16) 
+block_EOL.texi(,17) Block commands on a line. A dot in the end of the block
+block_EOL.texi(,18) @html
+block_EOL.texi(,19) in block
+block_EOL.texi(,20) in block l2.
+block_EOL.texi(,21) @end html
+block_EOL.texi(,22) end commands on a line, after the block with a dot.
+block_EOL.texi(,23) 
+block_EOL.texi(,24) Before the opening command @html
+block_EOL.texi(,25) in block
+block_EOL.texi(,26) @end html
+block_EOL.texi(,27) end commands on a line.
+block_EOL.texi(,28) 
+block_EOL.texi(,29) Before the opening command @html
+block_EOL.texi(,30) in block
+block_EOL.texi(,31) @end html after the closing command.
+block_EOL.texi(,32) 
+block_EOL.texi(,33) Before the opening command @html
+block_EOL.texi(,34) in block
+block_EOL.texi(,35) @end html
+block_EOL.texi(,36) . A symbol on a line.
+block_EOL.texi(,37) 
+block_EOL.texi(,38) Before the opening command @html
+block_EOL.texi(,39) in block
+block_EOL.texi(,40) @end html. A symbol after the closing command.
+block_EOL.texi(,41) 
+block_EOL.texi(,42) @heading tex
+block_EOL.texi(,43) 
+block_EOL.texi(,44) Block commands on a line
+block_EOL.texi(,48) end commands on a line.
+block_EOL.texi(,49) 
+block_EOL.texi(,53) Before the opening command end commands on a line.
+block_EOL.texi(,54) 
+block_EOL.texi(,57) Before the opening command  after the closing command.
+block_EOL.texi(,58) 
+block_EOL.texi(,62) Before the opening command . A symbol on a line.
+block_EOL.texi(,63) 
+block_EOL.texi(,66) Before the opening command . A symbol after the closing command.
+block_EOL.texi(,67) 
+block_EOL.texi(,68) 
+block_EOL.texi(,69) @heading verbatim
+block_EOL.texi(,70) 
+block_EOL.texi(,71) Block commands on a line
+block_EOL.texi(,72) @verbatim
+block_EOL.texi(,73) in block
+block_EOL.texi(,74) @end verbatim
+block_EOL.texi(,75) end commands on a line.
+block_EOL.texi(,76) 
+block_EOL.texi(,77) Before the opening command @verbatim
+block_EOL.texi(,78) in block
+block_EOL.texi(,79) @end verbatim
+block_EOL.texi(,80) end commands on a line.
+block_EOL.texi(,81) 
+block_EOL.texi(,82) Before the opening command @verbatim
+block_EOL.texi(,83) in block
+block_EOL.texi(,84) @end verbatim after the closing command.
+block_EOL.texi(,85) 
+block_EOL.texi(,86) Before the opening command @verbatim
+block_EOL.texi(,87) in block
+block_EOL.texi(,88) @end verbatim
+block_EOL.texi(,89) . A symbol on a line.
+block_EOL.texi(,90) 
+block_EOL.texi(,91) Before the opening command @verbatim
+block_EOL.texi(,92) in block
+block_EOL.texi(,93) @end verbatim. A symbol after the closing command.
+block_EOL.texi(,94) 
+block_EOL.texi(,95) @bye
