@@ -51,7 +51,6 @@ This is some html
 <address> my address </address>
 
 
-
 <hr size="1">
 <p>
  <font size="-1">
