@@ -181,7 +181,6 @@ an example
 
 <table><tr><td>&nbsp;</td><td><pre class="example">
 Some html <code>some code</code>.
-
 after html in example
 
 
@@ -285,7 +284,6 @@ a menu
 in menu comment
 html
 <cite>cite me</cite> a cite in html
-
 </pre></th></tr><tr><td><pre class="menu-preformatted"><a href="#SEC5">&bull; a menu name:other node</a>.</pre><pre class="menu-preformatted"> 
       description of other
       node
