@@ -12,7 +12,7 @@
 # Afterwards, load the file with command-line 
 # option -init-file <your_init_file>
 #
-# $Id: texi2html.init,v 1.121 2007-10-01 10:41:59 pertusus Exp $
+# $Id: texi2html.init,v 1.122 2007-10-02 09:17:06 pertusus Exp $
 
 ######################################################################
 # The following variables can also be set by command-line options
@@ -4536,6 +4536,7 @@ sub t2h_default_raw($$)
     }
     elsif ($style eq 'html')
     {
+        chomp ($text);
         return $text;
     }
     else
